--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "ip": "^1.1.5",
+    "node-netstat": "^1.4.2",
     "node-persist": "^2.1.0",
     "peer-ssdp": "0.0.5",
     "stoppable": "^1.0.4"
